# nonebot-plugin-rollpig

./: README.md  pyproject.toml
nonebot_plugin_rollpig/: __init__.py
nonebot_plugin_rollpig/resource/: pig.json  template.html
